// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > should state is disabled  1`] = `
<button
  class="font-semibold rounded-[15px] flex items-center justify-center px-[18px] py-[11px] bg-grey text-white"
  disabled=""
  type="button"
>
  button
</button>
`;

exports[`Button > should variant is default 1`] = `
<button
  class="font-semibold rounded-[15px] flex items-center justify-center px-[18px] py-[11px] bg-white text-primary border border-primary transition duration-200 hover:shadow-lg"
  type="button"
>
  button
</button>
`;

exports[`Button > should variant is primary 1`] = `
<button
  class="font-semibold rounded-[15px] flex items-center justify-center px-[18px] py-[11px] bg-primary text-white font-bold transition duration-200 hover:shadow-lg"
  type="button"
>
  button
</button>
`;

exports[`Button > should variant is secondary 1`] = `
<button
  class="font-semibold rounded-[15px] flex items-center justify-center px-[18px] py-[11px] bg-secondary text-primary transition duration-200 hover:shadow-lg"
  type="button"
>
  button
</button>
`;
